subo cambios en package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"http:/github.com/FedeMenendez/practico-api",
+  "homepage":"http://fedemenendez.github.io/practico-api",
   "name": "practico-api",
   "version": "0.1.0",
   "private": true,
